bookshop-demo/frontend/istio/virtualservice-25-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - bookshop-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: v1
      weight: 75  # サブセットv1にルーティングする比率
    - destination:
        host: frontend
        subset: v2
      weight: 25  # サブセットv2にルーティングする比率
